src/objects/ISSP_Portal_Service_Ids__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ASD__c</fullName>
        <label>ASD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyAccreditation__c</fullName>
        <label>AgencyAccreditation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirlineParticipation_Bank_Change__c</fullName>
        <label>AirlineParticipation Bank Change</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirlineParticipation_MinorChange__c</fullName>
        <label>AirlineParticipation Minor Change</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirlineParticipation__c</fullName>
        <label>AirlineParticipation Joining</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSPLink__c</fullName>
        <label>BSPLink</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLinkExport__c</fullName>
        <label>CASSLinkExport</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLinkImport__c</fullName>
        <label>CASSLinkImport</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLinkRouteAnalyzer__c</fullName>
        <label>CASSLinkRouteAnalyzer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS__c</fullName>
        <label>SIS</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ISSP Portal Service Ids</label>
</CustomObject>